Add HTML comment with relevant links about how this page is used.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <html lang="en">
 
+<!--
+
+Created following guidance from:
+  - https://pages.github.com/
+  - https://help.github.com/pages/
+
+-->
 
 <head>
+
 <title>Welcome to my site.</title>
 
 <style>
